# retire

./: LICENSE  setup.cfg
notebooks/: DIY Retirement Planning.ipynb  Trinity Study Recreation.ipynb  custom.css
retire/: __init__.py  core.py  data.py  plots.py  strategies.py  util.py
tests/: .coveragerc  profile_strategy.py  test_core.py
