[metadata]
name = retire
version = 0.1
author = Chris Beaumont
author_email = chrisnbeaumont@gmail.com
description = Retirement simulations with utility optimization.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChrisBeaumont/retire
project_urls =
    Bug Tracker = https://github.com/ChrisBeaumont/retire/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =retire
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    numpy
    scipy
    tqdm

[options.packages.find]
where = retire